pom and jenkins update